# app-scaling-keda

./: .gitignore  README.md  Tiltfile  blog.md
app/: config.py  pyproject.toml  receiver.py  sender.py
deploy/app/: configmap-receiver.yaml  configmap-sender.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  receiver.dockerfile  receiver.yaml  sender.dockerfile  sender.yaml
deploy/autoscale/: scaledobject.yaml
deploy/k8s/: kustomization.yaml
deploy/keda/: kustomization.yaml
deploy/keda/charts/keda/templates/: 02-crd-clustertriggerauthentications.yaml  03-crd-scaledjobs.keda.sh.yaml  04-crd-scaledobjects.keda.sh.yaml  05-crd-triggerauthentications.keda.sh.yaml
